--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@flowda-projects/v1-flowda-admin-api",
   "scripts": {
-    "serve": "../../../node_modules/.bin/dotenv -e .env.dev -- ../../../node_modules/.bin/nx serve flowda-admin-api"
+    "serve": "../../../node_modules/.bin/dotenv -e .env.dev -- ../../../node_modules/.bin/nx serve v1-flowda-admin-api"
   },
   "dependencies": {
     "@anatine/zod-mock": "^3.1.1",
