--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@flowda-projects/v1-flowda-admin-api",
   "scripts": {
-    "serve": "../../../node_modules/.bin/dotenv -e .env.dev -- ../../../node_modules/.bin/nx serve flowda-admin-api"
+    "serve": "../../../node_modules/.bin/dotenv -e .env.dev -- ../../../node_modules/.bin/nx serve v1-flowda-admin-api"
   },
   "dependencies": {
     "@anatine/zod-mock": "^3.1.1",
@@ -13,11 +13,14 @@
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/swagger": "^6.1.3",
     "@nestjs/testing": "^9.0.0",
+    "@trpc/client": "^10.44.1",
+    "@trpc/server": "^10.44.1",
     "axios": "1.1.0",
     "bcrypt": "^5.1.0",
     "cache-manager": "^5.2.4",
     "class-validator": "^0.13.2",
     "class-validator-jsonschema": "^3.1.1",
+    "consola": "^3.2.3",
     "cookie-parser": "^1.4.6",
     "cos-nodejs-sdk-v5": "^2.11.15",
     "cuid": "^2.1.8",
@@ -44,6 +47,7 @@
     "typescript": "~4.9.5",
     "wechat-oauth": "^1.5.0",
     "wechatpay-node-v3": "^2.0.6",
+    "znv": "^0.4.0",
     "zod": "3.21.1",
     "tslib": "^2.3.0",
     "class-transformer": "^0.5.1"
