--- a/package.json
+++ b/package.json
@@ -6,15 +6,14 @@
   "dependencies": {
     "@anatine/zod-mock": "^3.1.1",
     "@anatine/zod-openapi": "file:.yalc/@anatine/zod-openapi",
-    "@casl/ability": "^6.3.2",
+    "@casl": "ability@6.3.2",
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/swagger": "^6.1.3",
     "@nestjs/testing": "^9.0.0",
-    "@trpc/client": "^10.44.1",
-    "@trpc/server": "^10.44.1",
+    "@trpc": "server@10.44.1",
     "axios": "1.1.0",
     "bcrypt": "^5.1.0",
     "cache-manager": "^5.2.4",
